--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ my_library.bib.sav
 my_library.bib.bak
 assets/media/icons/brands/University_of_Edinburgh-Logo_2.png
 assets/media/icons/brands/mhl_logo.png
+public/
